# AegisVaultWindows

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: MIGRATION.md  PROTOCOL.md  QA_CHECKLIST.md  RELEASE_CHECKLIST.md  SECURITY_MODEL.md  UI_SPEC.md
docs/legacy/: legacy_aes_v2.py
docs/releases/: v0.4.1-alpha.md  v1.0.0.md
docs/screenshots/: placeholder.txt
scripts/: aegisvault.spec  build_windows.ps1  clean.ps1  run_dev.ps1  verify_release.ps1
src/aegisvault/: __init__.py  __main__.py  app.py  bootstrap.py  main.py  version.py
src/aegisvault/core/: __init__.py  base64_tools.py  crypto.py  exceptions.py  file_io.py  kdf.py  legacy.py  models.py  protocol.py
src/aegisvault/i18n/: __init__.py  translator.py
src/aegisvault/i18n/locales/: en-US.json  zh-CN.json
src/aegisvault/resources/qss/: dark.qss
src/aegisvault/services/: crypto_service.py  file_io.py  recent_files.py
src/aegisvault/settings/: models.py  store.py
src/aegisvault/ui/: __init__.py  main_window.py  platform_effects.py  styles.py  workers.py
src/aegisvault/ui/components/: __init__.py  action_bar.py  app_shell.py  card.py  file_drop_zone.py  file_picker_card.py  form_row.py  glass_card.py  inline_alert.py  output_preview.py  password_field.py  password_input.py  result_panel.py  result_summary.py  segmented_control.py  status_badge.py  (+1 more)
src/aegisvault/utils/: logging.py  paths.py
tests/: test_agv_corruption.py  test_base64_and_paths.py  test_base64_modes.py  test_file_cancel_cleanup.py  test_file_crypto.py  test_kdf.py  test_service_validation.py  test_settings_i18n.py  test_source_format.py  test_source_health.py  test_text_crypto.py  test_ui_smoke.py  test_version_consistency.py
(+14 files in other folders)
