[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisvault-desktop"
version = "0.2.0a0"
description = "A modern open-source AES-256-GCM desktop encryption app for Windows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AegisVault contributors" }]
keywords = ["aes", "encryption", "pyside6", "desktop", "windows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography>=42.0",
  "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pyinstaller>=6.8",
]

[project.scripts]
aegisvault = "aegisvault.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegisvault = ["i18n/locales/*.json", "resources/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["docs/legacy/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
packages = ["aegisvault"]
exclude = ["docs/legacy/"]

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

